# OS

./: log  test.py
ex 1/: Assignment 1
ex2/: .nfs0000000073230dc50000022e  CMakeLists.txt  Makefile  Makefile Example  README  SleepTest.cpp  SleepTest2.cpp  Thread.h  WordFrequencies.cpp  check.cpp  demo_itimer.c  demo_jmp.c  ex2.tar  main.cpp  sleeping_threads_list.cpp  sleeping_threads_list.h  test1.cpp  testing.cpp  uthreads.cpp  uthreads.h
ex2/all_tests/: SleepTest2.cpp
ex2/demos/: demo_itimer.c
ex3/: CMakeLists.txt  Count.cpp  Makefile  MapReduceFramework.cpp  README  SampleClient_for_testing.cpp  WordFrequencies.cpp  WordFrequenciesClient.hpp  ex3.tar  main.cpp
ex3/demos/atomicdemo/: atomicdemo  atomicdemo.cpp
ex3/demos/barrierdemo/: Barrier1.cpp  barrierdemo.cpp
ex4/: CMakeLists.txt  ConstantsTest.h  FlowExampleSimulation.cpp  Makefile  MemoryConstants.h  PhysicalMemory.cpp  PhysicalMemory.h  README  SimpleTest.cpp  SimpleTestDebugging.cpp  VirtualMemory (1).cpp  VirtualMemory.cpp  VirtualMemory.h  VirtualMemory_old.cpp  VirtualMemory_recursion.cpp  ex4.tar  main.cpp  master plan  randomTest.cpp
ex5/: CMakeLists.txt  FileAppClient.cpp  FileAppClient.h  FileAppServer.cpp  FileAppServer.h  Makefile  main  main.cpp  myFile.txt
test/: README
